<resources>
    <string name="app_name">Hello World!</string>

    <string name="first_name">Sam</string>
    <string name="last_name">Milo</string>
    <string name="full_name">%s %s</string>

    <string name="profile_bio_text">I am a computer science major with a love\n for math, art, and design.\n\nI hope to use my skills to help my community.\nSuccess is meaningless if we are not thriving together.</string>

    <string name="profile_hobby_header_text">Greatest Hobbies of All Time:</string>
    <string name="profile_hobby_first_text">🥇 Playing Video Games</string>
    <string name="profile_hobby_second_text">🥈 Painting and Illustrating</string>
    <string name="profile_hobby_third_text">🥉 Reading Books and Manga</string>
</resources>